# comp_graphics

./: .gitignore  CMakeLists.txt  README.md  particle.md  set_up_environ.md
hcs411_exam/exam_main/cheat/: boiler.cpp  build.bat  effects.cpp  geometry.cpp  input.cpp  walkthrough.md
hcs411_exam/exm/: R223912V_1.cpp  R223912V_2.cpp  R223912V_3.cpp  R223912V_4.md  R223912V_5.md
hcs411_exam/simplified/: draw.cpp  explaination.md  main.cpp  prompt.md
projects/Computer Graphics Project/: Group Project.docx  Group_project_task.md  build.bat  camera.cpp  camera.h  globals.cpp  globals.h  hud.cpp  hud.h  input.cpp  input.h  lighting.cpp  lighting.h  lighting_shading_explain.md  main.cpp  math_animation_explain.md  modelling_explain.md  objects.cpp  objects.h  texture_mapping_explain.md  textures.cpp  textures.h  viewing_projection_explain.md
src/: main.cpp  orbit.cpp
src/docut/: docnut.md  docut.cpp  donut.cpp  donut_2.cpp
src/other/: donut.c
src/other/CarPark/: CarPark_Documentation.docx  Group_presentation_assignment.md  build.bat  carpark.md  carpark_simple.cpp  main.cpp  mathematics_presentation.md
src/other/GardenScene/: CMakeLists.txt  Garden_Scene_Documentation.docx  IMPROVEMENTS.txt  QUICKSTART.txt  README_FIXES.md  build.bat  main.cpp
src/other/Practice/: maain.cpp
src/particle/: particle.cpp  particle.md  particle_2.cpp
vortex/: vortex.cpp  vortex.md
vortex/src/: glad.c  main.cpp
